# aperture

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tox.ini
.github/workflows/: lint-build-deploy.yaml  redeploy.yaml
aperture/: main.py  utils.py
aperture/providers/: __init__.py  base.py  discord.py  github.py  google.py  reddit.py
dev-keys/: README.md  rsa.private  rsa.public
static/: styles.css
templates/: base.jinja2  challenge.jinja2  failure.jinja2  index.jinja2  privacy.jinja2  success.jinja2  terms.jinja2
